--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 		<p>Use this interface to enter Simpletron code and data. Once complete, this interface will save your entered
 			code into a JSON file.</p>
 	</header>
-	<form method="post" action="">
+	<form id="codeform" method="post" action="">
 		<fieldset id="codeentry" class="codedata">
 			<legend>Enter your Simpletron instruction codes here</legend>
-			<label for="addrloc" id="addrloclbl">Address: <div id="addrloc">(hex address goes here)</div></label><br />
-			<label for="instcode" id="instcodelbl">Instruction/Code: <input type="text" id="instcode" /></label>
+			<label for="addrloc" id="addrloclbl">Address: </label>
+			<div id="addrloc">(hex address goes here)</div><br />
+			<label for="instcode" id="instcodelbl">Instruction/Code: </label><input type="text" id="instcode" />
+			<button id="insertcodebtn" click="insertSml">Add Code</button>
 		</fieldset>
 		<fieldset id="entrydisp" class="codedata" disabled>
 			<legend>What you entered is displayed here</legend>
@@ -31,6 +33,7 @@
 		</fieldset>
 		<input type="submit" id="submit" name="submit" />
 	</form>
+	<script src="js/createJsonFile.js"></script>
 </body>
 
 </html>
