--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 			<legend>Enter your Simpletron instruction codes here</legend>
 			<label for="addrloc" id="addrloclbl">Address: </label>
 			<div id="addrloc">(hex address goes here)</div><br />
-			<label for="instcode" id="instcodelbl">Instruction/Code: </label><input type="text" id="instcode" />
+			<label for="instcode" id="instcodelbl">Instruction/Code: </label>
+			<input type="text" id="instcode" />
 			<button id="insertcodebtn" click="insertSml">Add Code</button>
 		</fieldset>
 		<fieldset id="entrydisp" class="codedata" disabled>
 			<legend>What you entered is displayed here</legend>
-			<textarea cols="35" rows="35" class="codedisplay" placeholder="Code and instructions displayed here. . .">
+			<textarea cols="35" rows="35" id="codelines" class="codedisplay"
+				placeholder="Code and instructions displayed here. . .">
 			</textarea>
 		</fieldset>
 		<input type="submit" id="submit" name="submit" />
