--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	<form id="codeform" method="post" action="">
 		<fieldset id="codeentry" class="codedata">
 			<legend>Enter your Simpletron instruction codes here</legend>
-			<label for="addrloc" id="addrloclbl">Address: </label>
-			<div id="addrloc">(hex address goes here)</div><br />
+			<!--<label for="addrloc" id="addrloclbl">Address: </label>
+			<div id="addrloc"></div><br /> -->
 			<label for="instcode" id="instcodelbl">Instruction/Code: </label>
 			<input type="text" id="instcode" />
 			<button id="insertcodebtn" click="insertSml">Add Code</button>
