--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<form id="codeform" method="post" action="">
 		<fieldset id="codeentry" class="codedata">
 			<legend>Enter your Simpletron instruction codes here</legend>
-			<!--<label for="addrloc" id="addrloclbl">Address: </label>
-			<div id="addrloc"></div><br /> -->
+			<label for="addrloc" id="addrloclbl">Address: </label>
+			<div id="addrloc"></div><br />
 			<label for="instcode" id="instcodelbl">Instruction/Code: </label>
 			<input type="text" id="instcode" />
-			<button id="insertcodebtn" click="insertSml">Add Code</button>
+			<button id="insertcodebtn" type="button" onclick="insertSml()">Add Code</button>
 		</fieldset>
 		<fieldset id="entrydisp" class="codedata" disabled>
 			<legend>What you entered is displayed here</legend>
