updated launch.json to use Chrome; added scrollbars to textarea; added code to save text to a file.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 		</fieldset>
 		<fieldset id="entrydisp" class="codedata" disabled>
 			<legend>What you entered is displayed here</legend>
-			<textarea cols="35" rows="35" id="codelines" class="codedisplay"
+			<textarea cols="35" rows="15" id="codelines" class="codedisplay"
 				placeholder="Code and instructions displayed here. . .">
 			</textarea>
 		</fieldset>
 		<input type="submit" id="submit" name="submit" />
 	</form>
+	<div id="src-code"></div>
 	<script src="js/createJsonFile.js"></script>
 </body>
 
